# nameless

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pyproject.toml
scripts/: start_mcp_server.sh
src/nameless/: __init__.py  config.py
src/nameless/core/: __init__.py  agent.py  tools.py
src/nameless/scripts/: __init__.py  export_agent.py  import_agent.py
src/nameless/triggers/: __init__.py  bluesky.py  cron.py  discord.py
tests/: __init__.py  test_config.py  test_core_tools.py
